--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -2,5 +2,7 @@
   "item.peruviansdelight.causa": "Causa",
   "item.peruviansdelight.inca_kola": "Inca Kola",
 
+  "block.peruviansdelight.cara": "Cabezas Clavas",
+
   "creativetab.peruviansdelight_tab": "Peruvian's Delight"
 }
