--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.peruviansdelight.causa": "Causa",
   "item.peruviansdelight.inca_kola": "Inca Kola",
+  "item.peruviansdelight.aji_amarillo": "Yellow pepper",
 
   "block.peruviansdelight.cara": "Cabezas Clavas",
 
