Antes de agregar dependencia

--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   "item.peruviansdelight.causa": "Causa",
   "item.peruviansdelight.inca_kola": "Inca Kola",
-  "item.peruviansdelight.aji_amarillo": "Aji Amarillo",
+  "item.peruviansdelight.aji_amarillo": "Ají Amarillo",
 
   "block.peruviansdelight.cara": "Cabezas Clavas",
 
