--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.peruviansdelight.causa": "Causa",
   "item.peruviansdelight.inca_kola": "Inca Kola",
   "item.peruviansdelight.aji_amarillo": "Ají Amarillo",
+  "item.peruviansdelight.alma_en_pena": "Suffering Soul",
 
   "block.peruviansdelight.cara": "Cabezas Clavas",
 
