Camote, yuca y pote de ají amarillo

--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -2,7 +2,12 @@
   "item.peruviansdelight.causa": "Causa",
   "item.peruviansdelight.inca_kola": "Inca Kola",
   "item.peruviansdelight.aji_amarillo": "Ají Amarillo",
+  "item.peruviansdelight.pote_aji_amarillo": "Ají Amarillo Jar",
   "item.peruviansdelight.alma_en_pena": "Suffering Soul",
+  "item.peruviansdelight.camote": "Sweet Potato",
+  "item.peruviansdelight.camote_cocido": "Cooked Sweet Potato",
+  "item.peruviansdelight.yuca": "Yuca",
+  "item.peruviansdelight.yuca_frita": "Fried Yuca",
 
   "block.peruviansdelight.cara": "Cabezas Clavas",
 
