Traducción al español (españa)

--- a/src/main/resources/assets/peruviansdelight/lang/es_es.json
+++ b/src/main/resources/assets/peruviansdelight/lang/es_es.json
@@ -2,12 +2,12 @@
   "item.peruviansdelight.causa": "Causa",
   "item.peruviansdelight.inca_kola": "Inca Kola",
   "item.peruviansdelight.aji_amarillo": "Ají Amarillo",
-  "item.peruviansdelight.pote_aji_amarillo": "Ají Amarillo Jar",
-  "item.peruviansdelight.alma_en_pena": "Suffering Soul",
-  "item.peruviansdelight.camote": "Sweet Potato",
-  "item.peruviansdelight.camote_cocido": "Cooked Sweet Potato",
+  "item.peruviansdelight.pote_aji_amarillo": "Pote de Ají Amarillo",
+  "item.peruviansdelight.alma_en_pena": "Alma en Pena",
+  "item.peruviansdelight.camote": "Camote",
+  "item.peruviansdelight.camote_cocido": "Camote Cocido",
   "item.peruviansdelight.yuca": "Yuca",
-  "item.peruviansdelight.yuca_frita": "Fried Yuca",
+  "item.peruviansdelight.yuca_frita": "Yuca Frita",
 
   "block.peruviansdelight.cara": "Cabeza Clavas",
 
