--- a/src/main/resources/assets/peruviansdelight/lang/es_es.json
+++ b/src/main/resources/assets/peruviansdelight/lang/es_es.json
@@ -9,7 +9,7 @@
   "item.peruviansdelight.yuca": "Yuca",
   "item.peruviansdelight.yuca_frita": "Yuca Frita",
 
-  "block.peruviansdelight.cara": "Cabeza Clavas",
+  "block.peruviansdelight.cara": "Cabeza Clava",
 
   "creativetab.peruviansdelight_tab": "Peruvian's Delight"
 }
