atún, limón, sillao y nuevos sprites

--- a/src/main/resources/assets/peruviansdelight/lang/es_es.json
+++ b/src/main/resources/assets/peruviansdelight/lang/es_es.json
@@ -8,6 +8,12 @@
   "item.peruviansdelight.camote_cocido": "Camote Cocido",
   "item.peruviansdelight.yuca": "Yuca",
   "item.peruviansdelight.yuca_frita": "Yuca Frita",
+  "item.peruviansdelight.granos_soya": "Granos de Soya",
+  "item.peruviansdelight.sillao": "Sillao",
+  "item.peruviansdelight.atun": "Atún",
+  "item.peruviansdelight.atun_cocido": "Atún Codido",
+  "item.peruviansdelight.limon": "Limón",
+  "item.peruviansdelight.gajo_limon": "Gajo de Limón",
 
   "block.peruviansdelight.cara": "Cabeza Clava",
 
