--- a/src/main/resources/assets/peruviansdelight/lang/es_es.json
+++ b/src/main/resources/assets/peruviansdelight/lang/es_es.json
@@ -1,21 +1,21 @@
 {
   "item.peruviansdelight.causa": "Causa",
   "item.peruviansdelight.inca_kola": "Inca Kola",
-  "item.peruviansdelight.aji_amarillo": "Ají Amarillo",
-  "item.peruviansdelight.pote_aji_amarillo": "Pote de Ají Amarillo",
-  "item.peruviansdelight.alma_en_pena": "Alma en Pena",
+  "item.peruviansdelight.aji_amarillo": "Ají amarillo",
+  "item.peruviansdelight.pote_aji_amarillo": "Pote de ají amarillo",
+  "item.peruviansdelight.alma_en_pena": "Alma en pena",
   "item.peruviansdelight.camote": "Camote",
-  "item.peruviansdelight.camote_cocido": "Camote Cocido",
+  "item.peruviansdelight.camote_cocido": "Camote cocido",
   "item.peruviansdelight.yuca": "Yuca",
-  "item.peruviansdelight.yuca_frita": "Yuca Frita",
-  "item.peruviansdelight.granos_soya": "Granos de Soya",
+  "item.peruviansdelight.yuca_frita": "Yuca frita",
+  "item.peruviansdelight.granos_soya": "Granos de soya",
   "item.peruviansdelight.sillao": "Sillao",
   "item.peruviansdelight.atun": "Atún",
-  "item.peruviansdelight.atun_cocido": "Atún Codido",
+  "item.peruviansdelight.atun_cocido": "Atún cocido",
   "item.peruviansdelight.limon": "Limón",
-  "item.peruviansdelight.gajo_limon": "Gajo de Limón",
+  "item.peruviansdelight.gajo_limon": "Gajo de limón",
 
-  "block.peruviansdelight.cara": "Cabeza Clava",
+  "block.peruviansdelight.cara": "Cabeza clava",
 
   "creativetab.peruviansdelight_tab": "Peruvian's Delight"
 }
