Nuevo efecto e Inca Kola bebible

--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -17,5 +17,7 @@
 
   "block.peruviansdelight.cara": "Cabeza clava",
 
+  "effect.peruviansdelight.glugluglu": "GluGLuGlu Aaaah",
+
   "creativetab.peruviansdelight_tab": "Peruvian's Delight"
 }
