--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -1,19 +1,30 @@
 {
   "item.peruviansdelight.inca_kola": "Inca Kola",
-  "item.peruviansdelight.causa": "Causa",
+
+  "item.peruviansdelight.causa": "Causa de pollo",
+  "item.peruviansdelight.causa_atun": "Causa de atún",
+
   "item.peruviansdelight.aji_amarillo": "Ají amarillo",
-  "item.peruviansdelight.pote_aji_amarillo": "Ají amarillo jar",
-  "item.peruviansdelight.alma_en_pena": "Suffering soul",
   "item.peruviansdelight.camote": "Sweet potato",
   "item.peruviansdelight.camote_cocido": "Cooked sweet potato",
   "item.peruviansdelight.yuca": "Yuca",
   "item.peruviansdelight.yuca_frita": "Fried yuca",
-  "item.peruviansdelight.granos_soya": "Soybeans",
-  "item.peruviansdelight.sillao": "Sillao",
   "item.peruviansdelight.atun": "Tuna",
   "item.peruviansdelight.atun_cocido": "Cooked tuna",
   "item.peruviansdelight.limon": "Lemon",
   "item.peruviansdelight.gajo_limon": "Lemon wedge",
+  "item.peruviansdelight.palta": "Avocado",
+  "item.peruviansdelight.palta_cortada": "Cut avocado",
+
+  "item.peruviansdelight.pote_aji_amarillo": "Ají amarillo jar",
+  "item.peruviansdelight.sillao": "Sillao",
+
+  "item.peruviansdelight.vaina_soya": "Soybean pod",
+  "item.peruviansdelight.granos_soya": "Soybeans",
+  "item.peruviansdelight.semillas_aji_amarillo": "Aji amarillo seeds",
+  "item.peruviansdelight.semilla_palta": "Avocado seed",
+
+  "item.peruviansdelight.alma_en_pena": "Suffering soul",
 
   "block.peruviansdelight.cara": "Cabeza clava",
 
