--- a/src/main/resources/assets/peruviansdelight/lang/es_es.json
+++ b/src/main/resources/assets/peruviansdelight/lang/es_es.json
@@ -28,6 +28,8 @@
 
   "block.peruviansdelight.cara": "Cabeza clava",
 
+  "sounds.peruviansdelight.inca_kola_aaaah": "Aaaaaah",
+
   "effect.peruviansdelight.glugluglu": "GluGLuGlu Aaaah",
 
   "creativetab.peruviansdelight_tab": "Peruvian's Delight"
