--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -9,8 +9,9 @@
   "item.peruviansdelight.camote_cocido": "Cooked sweet potato",
   "item.peruviansdelight.yuca": "Yuca",
   "item.peruviansdelight.yuca_frita": "Fried yuca",
-  "item.peruviansdelight.atun": "Tuna",
-  "item.peruviansdelight.atun_cocido": "Cooked tuna",
+  "item.peruviansdelight.atun": "Tuna fish",
+  "item.peruviansdelight.filete_atun": "Tuna fish slice",
+  "item.peruviansdelight.filete_atun_cocido": "Cooked tuna fish slice",
   "item.peruviansdelight.limon": "Lemon",
   "item.peruviansdelight.gajo_limon": "Lemon wedge",
   "item.peruviansdelight.palta": "Avocado",
@@ -23,6 +24,7 @@
   "item.peruviansdelight.granos_soya": "Soybeans",
   "item.peruviansdelight.semillas_aji_amarillo": "Aji amarillo seeds",
   "item.peruviansdelight.semilla_palta": "Avocado seed",
+  "item.peruviansdelight.semillas_limon": "Lemon seed",
 
   "item.peruviansdelight.alma_en_pena": "Suffering soul",
 
