--- a/src/main/resources/assets/peruviansdelight/lang/es_es.json
+++ b/src/main/resources/assets/peruviansdelight/lang/es_es.json
@@ -16,6 +16,7 @@
   "item.peruviansdelight.gajo_limon": "Gajo de limón",
   "item.peruviansdelight.palta": "Palta",
   "item.peruviansdelight.palta_cortada": "Palta cortada",
+  "item.peruviansdelight.tocosh": "Tocosh",
 
   "item.peruviansdelight.pote_aji_amarillo": "Pote de ají amarillo",
   "item.peruviansdelight.sillao": "Sillao",
