--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -13,12 +13,13 @@
   "item.peruviansdelight.filete_atun": "Tuna fish slice",
   "item.peruviansdelight.filete_atun_cocido": "Cooked tuna fish slice",
   "item.peruviansdelight.limon": "Lemon",
-  "item.peruviansdelight.gajo_limon": "Lemon wedge",
+  "item.peruviansdelight.gajo_limon": "Lemon Wedge",
   "item.peruviansdelight.palta": "Avocado",
-  "item.peruviansdelight.palta_cortada": "Cut avocado",
+  "item.peruviansdelight.palta_cortada": "Avocado Slice",
+  "item.peruviansdelight.tocosh": "Tocosh",
 
   "item.peruviansdelight.pote_aji_amarillo": "Ají amarillo jar",
-  "item.peruviansdelight.sillao": "Sillao",
+  "item.peruviansdelight.sillao": "Soy sauce",
 
   "item.peruviansdelight.vaina_soya": "Soybean pod",
   "item.peruviansdelight.granos_soya": "Soybeans",
