--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -27,6 +27,8 @@
   "item.peruviansdelight.semilla_palta": "Avocado seed",
   "item.peruviansdelight.semillas_limon": "Lemon seed",
 
+  "item.peruviansdelight.atun_spawn_egg": "Tuna Spawn Egg",
+
   "item.peruviansdelight.alma_en_pena": "Suffering soul",
 
   "block.peruviansdelight.cara": "Cabeza clava",
