--- a/src/main/resources/assets/peruviansdelight/lang/es_es.json
+++ b/src/main/resources/assets/peruviansdelight/lang/es_es.json
@@ -27,6 +27,8 @@
   "item.peruviansdelight.semilla_palta": "Semilla de palta",
   "item.peruviansdelight.semillas_limon": "Semillas de limón",
 
+  "item.peruviansdelight.atun_spawn_egg": "Generar atún",
+
   "item.peruviansdelight.alma_en_pena": "Alma en pena",
 
   "block.peruviansdelight.cara": "Cabeza clava",
