--- a/src/main/resources/assets/peruviansdelight/lang/es_es.json
+++ b/src/main/resources/assets/peruviansdelight/lang/es_es.json
@@ -3,6 +3,7 @@
 
   "item.peruviansdelight.causa": "Causa de pollo",
   "item.peruviansdelight.causa_atun": "Causa de atún",
+  "item.peruviansdelight.chaufa": "Chaufa",
 
   "item.peruviansdelight.aji_amarillo": "Ají amarillo",
   "item.peruviansdelight.camote": "Camote",
