Cubo con atún, Tallarín Saltado y Kion

--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -18,9 +18,12 @@
   "item.peruviansdelight.palta": "Avocado",
   "item.peruviansdelight.palta_cortada": "Avocado Slice",
   "item.peruviansdelight.tocosh": "Tocosh",
+  "item.peruviansdelight.kion": "Kion",
+  "item.peruviansdelight.tallarin_saltado": "Tallarín Saltado",
 
   "item.peruviansdelight.pote_aji_amarillo": "Ají amarillo jar",
   "item.peruviansdelight.sillao": "Soy sauce",
+  "item.peruviansdelight.atun_bucket": "Tuna Bucket",
 
   "item.peruviansdelight.vaina_soya": "Soybean pod",
   "item.peruviansdelight.granos_soya": "Soybeans",
