--- a/src/main/resources/assets/peruviansdelight/lang/es_es.json
+++ b/src/main/resources/assets/peruviansdelight/lang/es_es.json
@@ -18,6 +18,9 @@
   "item.peruviansdelight.palta": "Palta",
   "item.peruviansdelight.palta_cortada": "Palta cortada",
   "item.peruviansdelight.tocosh": "Tocosh",
+  "item.peruviansdelight.kion": "Kion",
+  "item.peruviansdelight.tallarin_saltado": "Tallarín Saltado",
+  "item.peruviansdelight.atun_bucket": "Cubo con Atún",
 
   "item.peruviansdelight.pote_aji_amarillo": "Pote de ají amarillo",
   "item.peruviansdelight.sillao": "Sillao",
