--- a/src/main/resources/assets/peruviansdelight/lang/es_es.json
+++ b/src/main/resources/assets/peruviansdelight/lang/es_es.json
@@ -4,6 +4,8 @@
   "item.peruviansdelight.causa": "Causa de pollo",
   "item.peruviansdelight.causa_atun": "Causa de atún",
   "item.peruviansdelight.chaufa": "Chaufa",
+  "item.peruviansdelight.tallarin_saltado": "Tallarín Saltado",
+  "item.peruviansdelight.lomo_saltado": "Lomo Saltado",
 
   "item.peruviansdelight.aji_amarillo": "Ají amarillo",
   "item.peruviansdelight.camote": "Camote",
@@ -19,11 +21,14 @@
   "item.peruviansdelight.palta_cortada": "Palta cortada",
   "item.peruviansdelight.tocosh": "Tocosh",
   "item.peruviansdelight.kion": "Kion",
-  "item.peruviansdelight.tallarin_saltado": "Tallarín Saltado",
-  "item.peruviansdelight.atun_bucket": "Cubo con Atún",
+  "item.peruviansdelight.papas_cortadas": "Papas cortadas",
+  "item.peruviansdelight.papas_fritas": "Papas fritas",
 
   "item.peruviansdelight.pote_aji_amarillo": "Pote de ají amarillo",
   "item.peruviansdelight.sillao": "Sillao",
+  "item.peruviansdelight.huancaina": "Huancaína",
+
+  "item.peruviansdelight.atun_bucket": "Cubo con Atún",
 
   "item.peruviansdelight.vaina_soya": "Vaina de soya",
   "item.peruviansdelight.granos_soya": "Granos de soya",
