Ceviche, Pollo a la brasa y modificaciones

--- a/src/main/resources/assets/peruviansdelight/lang/es_es.json
+++ b/src/main/resources/assets/peruviansdelight/lang/es_es.json
@@ -6,11 +6,16 @@
   "item.peruviansdelight.chaufa": "Chaufa",
   "item.peruviansdelight.tallarin_saltado": "Tallarín Saltado",
   "item.peruviansdelight.lomo_saltado": "Lomo Saltado",
+  "item.peruviansdelight.pollo_brasa": "Pollo a la brasa",
+  "item.peruviansdelight.ceviche": "Ceviche",
 
   "item.peruviansdelight.aji_amarillo": "Ají amarillo",
   "item.peruviansdelight.camote": "Camote",
   "item.peruviansdelight.camote_cocido": "Camote cocido",
+  "item.peruviansdelight.camote_cortado": "Camote cortado",
+  "item.peruviansdelight.camote_frito": "Camote frito",
   "item.peruviansdelight.yuca": "Yuca",
+  "item.peruviansdelight.yuca_cortada": "Yuca cortada",
   "item.peruviansdelight.yuca_frita": "Yuca frita",
   "item.peruviansdelight.atun": "Atún",
   "item.peruviansdelight.filete_atun": "Filete de atún",
