--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -6,11 +6,16 @@
   "item.peruviansdelight.chaufa": "Chaufa",
   "item.peruviansdelight.tallarin_saltado": "Tallarín Saltado",
   "item.peruviansdelight.lomo_saltado": "Lomo Saltado",
+  "item.peruviansdelight.pollo_brasa": "Pollo a la brasa",
+  "item.peruviansdelight.ceviche": "Ceviche",
 
   "item.peruviansdelight.aji_amarillo": "Ají amarillo",
   "item.peruviansdelight.camote": "Sweet potato",
   "item.peruviansdelight.camote_cocido": "Cooked sweet potato",
+  "item.peruviansdelight.camote_cortado": "Sweet potato slice",
+  "item.peruviansdelight.camote_frito": "Fried sweet potato",
   "item.peruviansdelight.yuca": "Yuca",
+  "item.peruviansdelight.yuca_cortada": "Yuca slice",
   "item.peruviansdelight.yuca_frita": "Fried yuca",
   "item.peruviansdelight.atun": "Tuna fish",
   "item.peruviansdelight.filete_atun": "Tuna fish slice",
