Aeropuerto, Mostrito y Papa a la Huancaína

--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -8,6 +8,9 @@
   "item.peruviansdelight.lomo_saltado": "Lomo Saltado",
   "item.peruviansdelight.pollo_brasa": "Pollo a la brasa",
   "item.peruviansdelight.ceviche": "Ceviche",
+  "item.peruviansdelight.aeropuerto": "Aeropuerto",
+  "item.peruviansdelight.mostrito": "Mostrito",
+  "item.peruviansdelight.papa_huancaina": "Papa a la Huancaína",
 
   "item.peruviansdelight.aji_amarillo": "Ají amarillo",
   "item.peruviansdelight.camote": "Sweet potato",
