--- a/src/main/resources/assets/peruviansdelight/lang/es_es.json
+++ b/src/main/resources/assets/peruviansdelight/lang/es_es.json
@@ -12,7 +12,13 @@
   "item.peruviansdelight.mostrito": "Mostrito",
   "item.peruviansdelight.papa_huancaina": "Papa a la Huancaína",
 
+  "item.peruviansdelight.tocosh": "Tocosh",
+
   "item.peruviansdelight.aji_amarillo": "Ají amarillo",
+  "item.peruviansdelight.limon": "Limón",
+  "item.peruviansdelight.gajo_limon": "Gajo de limón",
+  "item.peruviansdelight.kion": "Kion",
+
   "item.peruviansdelight.camote": "Camote",
   "item.peruviansdelight.camote_cocido": "Camote cocido",
   "item.peruviansdelight.camote_cortado": "Camote cortado",
@@ -23,14 +29,13 @@
   "item.peruviansdelight.atun": "Atún",
   "item.peruviansdelight.filete_atun": "Filete de atún",
   "item.peruviansdelight.filete_atun_cocido": "Filete de atún cocido",
-  "item.peruviansdelight.limon": "Limón",
-  "item.peruviansdelight.gajo_limon": "Gajo de limón",
   "item.peruviansdelight.palta": "Palta",
   "item.peruviansdelight.palta_cortada": "Palta cortada",
-  "item.peruviansdelight.tocosh": "Tocosh",
-  "item.peruviansdelight.kion": "Kion",
   "item.peruviansdelight.papas_cortadas": "Papas cortadas",
   "item.peruviansdelight.papas_fritas": "Papas fritas",
+  "item.peruviansdelight.tentaculo_pota": "Tentáculo de pota",
+  "item.peruviansdelight.pota_cortado": "Tentáculo de pota cortado",
+  "item.peruviansdelight.chicharron_pota": "Chicharrón de pota",
 
   "item.peruviansdelight.pote_aji_amarillo": "Pote de ají amarillo",
   "item.peruviansdelight.sillao": "Sillao",
