--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -47,14 +47,14 @@
   "item.peruviansdelight.granos_soya": "Soybeans",
   "item.peruviansdelight.semillas_aji_amarillo": "Aji amarillo seeds",
 
-  "item.peruviansdelight.semillas_limon": "Lemon seed",
-
   "item.peruviansdelight.atun_spawn_egg": "Tuna Spawn Egg",
 
   "item.peruviansdelight.alma_en_pena": "Suffering soul",
 
   "block.peruviansdelight.palta_leaves": "Avocado leaves",
   "block.peruviansdelight.semilla_palta": "Avocado seed",
+  "block.peruviansdelight.limon_leaves": "Lemon leaves",
+  "block.peruviansdelight.semillas_limon": "Lemon seed",
 
   "block.peruviansdelight.cara": "Cabeza clava",
 
