--- a/src/main/resources/assets/peruviansdelight/lang/es_es.json
+++ b/src/main/resources/assets/peruviansdelight/lang/es_es.json
@@ -47,14 +47,14 @@
   "item.peruviansdelight.granos_soya": "Granos de soya",
   "item.peruviansdelight.semillas_aji_amarillo": "Semillas de ají amarillo",
 
-  "item.peruviansdelight.semillas_limon": "Semillas de limón",
-
   "item.peruviansdelight.atun_spawn_egg": "Generar atún",
 
   "item.peruviansdelight.alma_en_pena": "Alma en pena",
 
   "block.peruviansdelight.palta_leaves": "Hojas de palta",
   "block.peruviansdelight.semilla_palta": "Semilla de palta",
+  "block.peruviansdelight.limon_leaves": "Hojas de limón",
+  "block.peruviansdelight.semillas_limon": "Semillas de limón",
 
   "block.peruviansdelight.cara": "Cabeza clava",
 
