Generación natural de árboles (Sin Bioma)

--- a/src/main/resources/assets/peruviansdelight/lang/en_us.json
+++ b/src/main/resources/assets/peruviansdelight/lang/en_us.json
@@ -51,9 +51,9 @@
 
   "item.peruviansdelight.alma_en_pena": "Suffering soul",
 
-  "block.peruviansdelight.palta_leaves": "Avocado leaves",
+  "block.peruviansdelight.palto_leaves": "Palto leaves",
   "block.peruviansdelight.semilla_palta": "Avocado seed",
-  "block.peruviansdelight.limon_leaves": "Lemon leaves",
+  "block.peruviansdelight.limonero_leaves": "Lemon tree leaves",
   "block.peruviansdelight.semillas_limon": "Lemon seed",
 
   "block.peruviansdelight.cara": "Cabeza clava",
