--- a/src/main/resources/assets/peruviansdelight/lang/es_es.json
+++ b/src/main/resources/assets/peruviansdelight/lang/es_es.json
@@ -51,9 +51,9 @@
 
   "item.peruviansdelight.alma_en_pena": "Alma en pena",
 
-  "block.peruviansdelight.palta_leaves": "Hojas de palta",
+  "block.peruviansdelight.palto_leaves": "Hojas de palto",
   "block.peruviansdelight.semilla_palta": "Semilla de palta",
-  "block.peruviansdelight.limon_leaves": "Hojas de limón",
+  "block.peruviansdelight.limonero_leaves": "Hojas de limonero",
   "block.peruviansdelight.semillas_limon": "Semillas de limón",
 
   "block.peruviansdelight.cara": "Cabeza clava",
